; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msxml3/extr_mxwriter.c_get_code_page.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msxml3/extr_mxwriter.c_get_code_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xml_encoding_data = type { i32 }

@XmlEncoding_Unknown = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [25 x i8] c"unsupported encoding %d\0A\00", align 1
@E_NOTIMPL = common dso_local global i32 0, align 4
@xml_encoding_map = common dso_local global %struct.xml_encoding_data* null, align 8
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32*)* @get_code_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_code_page(i64 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.xml_encoding_data*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @XmlEncoding_Unknown, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @FIXME(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i64 %11)
  %13 = load i32, i32* @E_NOTIMPL, align 4
  store i32 %13, i32* %3, align 4
  br label %23

14:                                               ; preds = %2
  %15 = load %struct.xml_encoding_data*, %struct.xml_encoding_data** @xml_encoding_map, align 8
  %16 = load i64, i64* %4, align 8
  %17 = getelementptr inbounds %struct.xml_encoding_data, %struct.xml_encoding_data* %15, i64 %16
  store %struct.xml_encoding_data* %17, %struct.xml_encoding_data** %6, align 8
  %18 = load %struct.xml_encoding_data*, %struct.xml_encoding_data** %6, align 8
  %19 = getelementptr inbounds %struct.xml_encoding_data, %struct.xml_encoding_data* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %5, align 8
  store i32 %20, i32* %21, align 4
  %22 = load i32, i32* @S_OK, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %14, %10
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @FIXME(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
